# physik590

./: .gitignore  .gitmodules  Struktur.mm
C++/: CMakeLists.txt  Doxyfile  README.markdown  dependencies.markdown  hello.cpp
Programm/: .gitignore  20140526-day.fish  20140526-nightly.fish  20140606-run.fish  20140608-run.fish  Analysis.cpp  Analysis.hpp  AnharmonicOscillator.cpp  AnharmonicOscillator.hpp  BoostHistogram.cpp  BoostHistogram.hpp  BootstrapDriver.cpp  BootstrapDriver.hpp  BootstrapPool.cpp  BootstrapPool.hpp  BootstrapSample.cpp  BootstrapSample.hpp  BootstrappedHistogram.cpp  BootstrappedHistogram.hpp  BootstrappedQuantity.cpp  BootstrappedQuantity.hpp  CMakeLists.txt  Computable.cpp  Computable.hpp  ConcurrentCounter.cpp  ConcurrentCounter.hpp  Correlation.cpp  Correlation.hpp  DistributionMoments.cpp  DistributionMoments.hpp  FixedHistogram.cpp  FixedHistogram.hpp  GEVPSolver.cpp  GEVPSolver.hpp  HarmonicOscillator.cpp  HarmonicOscillator.hpp  HarmonicOscillatorTest.cpp  HarmonicOscillatorTest.hpp  HarmonicOszillator.cpp  HarmonicOszillator.hpp  (+69 more)
Text/: .gitignore  00-Titel.tex  11EA8F-trajectory-04-more_iterations.csv  20-Methoden.tex  20-Vorwort.tex  40-Implementierung.tex  50-Text.tex  80-Herleitungen.tex  80-delta-1d.tex  95-Literatur.tex  99-Erklaerung.tex  Bachelorarbeit.tex  DC5256-histogram-position-resultset.csv  E-shift.txt  header.sty  header.tex  histogram-position-resultset.csv  makefile  plots-for-text  rebuild-all.txt  trajectory-04-more_iterations-i{300}-o{1}-a{0.1}-s{0}-c{0}-margin{0.632456}.csv
Text/CSV/: 10D74E-position-density.csv  84DAA2-correlations.csv  FF7AA0-histogram-position-resultset.csv  FF7AA0-potential.csv  histogram-korrigiert.csv  raw_data.csv  raw_data_higher.csv
Text/CSV/+1/: a-E0-0.01.csv  a-E0-0.05.csv  a-E0-0.1.csv  a-E0-0.2.csv  a-E0-0.3.csv  a-E0-0.4.csv  a-E0-0.5.csv  a-E2-E0-0.01.csv  a-E2-E0-0.05.csv  a-E2-E0-0.1.csv  a-E2-E0-0.2.csv  a-E2-E0-0.3.csv  a-E2-E0-0.4.csv  a-E2-E0-0.5.csv  raw_data.csv  sigma-E0-0.005.csv
Text/CSV/-1/: a-E0-0.01.csv  a-E0-0.05.csv  a-E0-0.1.csv  a-E0-0.2.csv  a-E0-0.3.csv  a-E0-0.4.csv  a-E0-0.5.csv  a-E0-0.7.csv  a-E0-1.0.csv  a-E0-10.0.csv  a-E0-fit-0.01.csv  a-E0-fit-0.05.csv  a-E0-fit-0.1.csv  a-E0-fit-0.2.csv  a-E0-fit-0.3.csv  a-E0-fit-0.4.csv  a-E0-fit-0.5.csv  a-E0-fit-0.7.csv  a-E0-fit-1.0.csv  a-E0-meta-daten.csv  a-E0-meta-fit-0.01.csv  a-E0-meta-fit-0.05.csv  a-E0-meta-fit-0.1.csv  a-E0-meta-fit-0.2.csv  a-E0-meta-fit-0.3.csv  a-E0-meta-fit-0.4.csv  a-E0-meta-fit-1.0.csv
Text/CSV/gauss-potential/neg/: 029833-potential.csv  156D90-potential.csv  4DD6F0-potential.csv
Text/CSV/gauss-potential/pos/: 00C58F-potential.csv  18B9E2-potential.csv  53D7EB-potential.csv  6FC501-potential.csv  DF05AB-potential.csv
Text/CSV/lambdas/: 1C5A92-eigenvalue-01-fit.csv  1C5A92-eigenvalue-01.csv  1C5A92-eigenvalue-02-fit.csv  1C5A92-eigenvalue-02.csv  1C5A92-eigenvalue-03-fit.csv  1C5A92-eigenvalue-03.csv  1C5A92-eigenvalue-04-fit.csv  1C5A92-eigenvalue-04.csv  1C5A92-eigenvalue-05-fit.csv  1C5A92-eigenvalue-05.csv  1C5A92-eigenvalue-06-fit.csv  1C5A92-eigenvalue-06.csv  1C5A92-eigenvalue-07-fit.csv  1C5A92-eigenvalue-07.csv  1C5A92-eigenvalue-08-fit.csv  1C5A92-eigenvalue-08.csv  1C5A92-eigenvalue-09-fit.csv  1C5A92-eigenvalue-09.csv  1C5A92-eigenvalue-10-fit.csv  1C5A92-eigenvalue-10.csv  1C5A92-eigenvalue-11-fit.csv  1C5A92-eigenvalue-11.csv  1C5A92-eigenvalue-12-fit.csv  1C5A92-eigenvalue-12.csv  77130C-eigenvalue-01-fit.csv  77130C-eigenvalue-01.csv  77130C-eigenvalue-02-fit.csv  77130C-eigenvalue-02.csv  77130C-eigenvalue-03-fit.csv  77130C-eigenvalue-03.csv  77130C-eigenvalue-04-fit.csv  77130C-eigenvalue-04.csv  77130C-eigenvalue-05-fit.csv  77130C-eigenvalue-05.csv  77130C-eigenvalue-06-fit.csv  77130C-eigenvalue-06.csv  77130C-eigenvalue-07-fit.csv  77130C-eigenvalue-07.csv  77130C-eigenvalue-08-fit.csv  77130C-eigenvalue-08.csv  (+28 more)
Vortrag/: Vortrag.tex  header.sty  table1-1.csv  table1-2.csv  table2.csv
